--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,13 @@
         "laravel/ui": "^4.0",
         "maatwebsite/excel": "^3.1",
         "phpmailer/phpmailer": "^6.8",
+        "spatie/laravel-searchable": "^1.11",
         "yajra/laravel-datatables": "^10.1",
         "yajra/laravel-datatables-buttons": "^10.0",
         "yajra/laravel-datatables-oracle": "^10.4"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.8",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
